--- a/infra/assets/base.css
+++ b/infra/assets/base.css
@@ -33,7 +33,7 @@ a {
   /* font-sizes */
   --font-size-app: var(--font-size-4);
   --font-size-h1: var(--size-fluid-3);
-  --font-size-h2: var(--size-fluid-3);
+  --font-size-h2: var(--font-size-3);
 
   /* font-weight */
   --font-weight-bold: var(--font-weight-9);
