--- a/infra/assets/base.css
+++ b/infra/assets/base.css
@@ -1,5 +1,4 @@
-/* @import "https://unpkg.com/open-props/normalize.min.css"; */
-@import "https://unpkg.com/open-props";
+@import "open-props/postcss/style";
 
 *,
 *::before,
